--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,7 @@ allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
+allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -166,6 +167,7 @@ allow 156.229.232.98;
 allow 156.229.233.92;
 allow 158.220.123.219;
 allow 158.69.252.116;
+allow 159.89.124.116;
 allow 160.119.249.240;
 allow 161.97.71.11;
 allow 162.210.173.17;
@@ -303,7 +305,6 @@ allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
-allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -962,6 +963,7 @@ allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -1037,6 +1039,7 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
@@ -1046,6 +1049,7 @@ allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:cad:d0::9ca9:7001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1130,6 +1134,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1248,6 +1253,7 @@ allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1567,6 +1573,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1673,12 +1680,14 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.56.239;
 allow 37.187.74.97;
+allow 37.221.208.71;
 allow 37.228.129.128;
 allow 37.228.129.189;
 allow 37.228.129.5;
@@ -1686,7 +1695,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.75.136.144;
 allow 38.97.116.244;
 allow 40.160.3.1;
@@ -1697,6 +1705,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1772,7 +1781,6 @@ allow 45.84.107.97;
 allow 45.9.148.50;
 allow 45.9.168.108;
 allow 45.94.31.68;
-allow 45.95.169.100;
 allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
@@ -1841,7 +1849,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
-allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.48.28.239;
@@ -1909,7 +1916,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
-allow 91.229.239.28;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
