--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -133,6 +133,7 @@ deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:524::1;
@@ -142,6 +143,7 @@ deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
+deny 2604:a880:cad:d0::9ca9:7001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
@@ -226,6 +228,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:5501:3000:1dc::2;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
@@ -343,6 +346,7 @@ deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
+deny 2a01:270:9847::1;
 deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -662,6 +666,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
