--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -767,3 +767,4 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
+allow 2c0f:6cf::1000;
