--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,6 +134,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.147.97.190;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -965,7 +966,6 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -989,6 +989,7 @@ allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1321,6 +1322,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1672,6 +1674,7 @@ allow 2a13:d207:0:461::1;
 allow 2c0f:6cf::1000;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1686,7 +1689,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.75.136.144;
 allow 38.97.116.244;
 allow 40.160.3.1;
@@ -1794,6 +1796,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1827,7 +1830,6 @@ allow 5.45.98.162;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
