--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -134,6 +134,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.147.97.190;
 set_real_ip_from 141.164.38.67;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
@@ -965,7 +966,6 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
-set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -989,6 +989,7 @@ set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
+set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
@@ -1321,6 +1322,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1672,6 +1674,7 @@ set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 2c0f:6cf::1000;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1686,7 +1689,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.75.136.144;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 40.160.3.1;
@@ -1794,6 +1796,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.230.174.6;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1827,7 +1830,6 @@ set_real_ip_from 5.45.98.162;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
