--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,6 +14,7 @@ allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
+allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -161,7 +162,6 @@ allow 158.220.123.219;
 allow 158.69.252.116;
 allow 159.89.124.116;
 allow 160.119.249.240;
-allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -647,7 +647,6 @@ allow 194.26.192.77;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.211.124.29;
 allow 195.26.245.180;
 allow 195.47.238.176;
 allow 195.47.238.177;
@@ -1118,6 +1117,7 @@ allow 2607:5300:205:300::89b;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1259,7 +1259,6 @@ allow 2a02:c206:2240:5054::1;
 allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
-allow 2a02:c207:2247:3404::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1548,6 +1547,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1679,6 +1679,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1752,7 +1753,6 @@ allow 45.84.107.76;
 allow 45.84.107.97;
 allow 45.9.148.50;
 allow 45.9.168.108;
-allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
