--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,8 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.164.38.67;
+allow 141.94.156.206;
+allow 141.94.156.54;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -168,6 +170,7 @@ allow 158.220.123.219;
 allow 158.69.252.116;
 allow 159.89.124.116;
 allow 160.119.249.240;
+allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -235,7 +238,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.248.145;
+allow 178.29.160.218;
 allow 179.35.3.170;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -712,8 +715,12 @@ allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:304:300::5bb5;
+allow 2001:41d0:304:300::74bf;
 allow 2001:41d0:601:1100::2947;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:801:1000::1b55;
+allow 2001:41d0:801:1000::c2;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -965,7 +972,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1126,6 +1132,7 @@ allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::240d;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:205:300::89b;
+allow 2607:5300:205:300::c99;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
@@ -1270,6 +1277,7 @@ allow 2a02:c206:2240:5054::1;
 allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
+allow 2a02:c207:2247:3404::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1319,7 +1327,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1563,6 +1570,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:3f23::1;
 allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1784,13 +1792,14 @@ allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.79.24.181;
+allow 51.79.30.185;
 allow 51.81.222.62;
 allow 5.181.80.107;
+allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1821,6 +1830,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 57.128.164.66;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1853,6 +1863,7 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
