--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -10,8 +10,12 @@ set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
+set_real_ip_from 2001:41d0:304:300::5bb5;
+set_real_ip_from 2001:41d0:304:300::74bf;
 set_real_ip_from 2001:41d0:601:1100::2947;
 set_real_ip_from 2001:41d0:601:1100::6524;
+set_real_ip_from 2001:41d0:801:1000::1b55;
+set_real_ip_from 2001:41d0:801:1000::c2;
 set_real_ip_from 2001:41d0:a:2a61::1;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
@@ -226,6 +230,7 @@ set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::240d;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:205:300::89b;
+set_real_ip_from 2607:5300:205:300::c99;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
@@ -369,6 +374,7 @@ set_real_ip_from 2a02:c206:2240:5054::1;
 set_real_ip_from 2a02:c206:2240:5264::1;
 set_real_ip_from 2a02:c206:2240:8448::1;
 set_real_ip_from 2a02:c206:2241:2588::1;
+set_real_ip_from 2a02:c207:2247:3404::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -418,7 +424,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -662,6 +667,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:3f23::1;
 set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
