--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -135,6 +135,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.147.97.190;
 set_real_ip_from 141.164.38.67;
 set_real_ip_from 141.94.156.206;
 set_real_ip_from 141.94.156.54;
@@ -655,6 +656,7 @@ set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.156.103.16;
 set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
+set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
@@ -1127,6 +1129,7 @@ set_real_ip_from 2605:6400:30:fc99:e3a6:883d:7e1c:1337;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
+set_real_ip_from 2605:6400:d814:1d1::100;
 set_real_ip_from 2605:a140:2236:4415::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:120:c74::1;
@@ -1335,7 +1338,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1572,7 +1574,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1703,7 +1704,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1862,13 +1862,11 @@ set_real_ip_from 80.94.92.84;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
